tests/baselines/reference/declarationEmitInvalidReference2.errors.txt
tests/cases/compiler/declarationEmitInvalidReference2.ts(1,22): error TS6053: File 'tests/cases/compiler/invalid.ts' not found.


==== tests/cases/compiler/declarationEmitInvalidReference2.ts (1 errors) ====
    /// <reference path="invalid.ts" />
                         ~~~~~~~~~~
!!! error TS6053: File 'tests/cases/compiler/invalid.ts' not found.
    var x = 0;